still adding back subsystems, but I finaly got error checking acutually working

--- a/robot/build.gradle
+++ b/robot/build.gradle
@@ -6,7 +6,7 @@ plugins {
 }
 
 def TEAM = 2915
-def ROBOT_CLASS = "com.team2915.POWER_UP.Robot"
+def ROBOT_CLASS = "com.team2915.SER_CHUNKY.Robot"
 
 // Define my targets (RoboRIO) and artifacts (deployable files)
 // This is added by GradleRIO's backing project EmbeddedTools.
